--- a/v7/scss/modal.scss
+++ b/v7/scss/modal.scss
@@ -8,7 +8,7 @@
     z-index: 1000;
     box-sizing: border-box;
     padding: 20px;
-    width: min(400px, 90%);
+    width: min(600px, 90%);
     background-color: #ffffff; /* White background */
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
